--- a/app/src/main/java/com/krispachi/KasirTokoKomik/Komik.form
+++ b/app/src/main/java/com/krispachi/KasirTokoKomik/Komik.form
@@ -5,13 +5,10 @@
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Halaman Komik"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1000, 700]"/>
-    </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1000, 700]"/>
+      <Dimension value="[1000, 750]"/>
     </Property>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1000, 700]"/>
+      <Dimension value="[1000, 750]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -39,10 +36,10 @@
     <Container class="javax.swing.JPanel" name="Container">
       <Properties>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[1000, 700]"/>
+          <Dimension value="[1000, 750]"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[1000, 700]"/>
+          <Dimension value="[1000, 750]"/>
         </Property>
       </Properties>
       <Constraints>
@@ -142,9 +139,9 @@
                   <Component id="TerapkanTabelData" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="DetailData" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="134" max="32767" attributes="0"/>
+                  <EmptySpace pref="110" max="32767" attributes="0"/>
                   <Component id="Kembali" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
@@ -669,6 +666,9 @@
                 <Property name="text" type="java.lang.String" value="Kosongkan Input"/>
                 <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Mengosongkan Input"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnKosongkanActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -698,6 +698,9 @@
                 <Property name="text" type="java.lang.String" value="Ubah"/>
                 <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Ubah Data"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUbahActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -730,6 +733,9 @@
                 <Property name="text" type="java.lang.String" value="Hapus"/>
                 <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Hapus Data"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHapusActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -779,6 +785,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Reset"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnResetActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnFilter">
               <Properties>
@@ -787,6 +796,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Filter"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFilterActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -874,6 +886,9 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="btnLihatDetailData">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="cc" red="99" type="rgb"/>
+                </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="JetBrains Mono SemiBold" size="12" style="0"/>
                 </Property>
